# Sk_Parser

./: .gitignore  README.md  pyproject.toml
src/: csv_writer.py  main.py  scrolls.py  selenium_parser_sk.py  test.py
